--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "workspaces": [
     "src/practicajesi_backend",
     "src/practicajesi_frontend"
-  ]
+  ],
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
+  }
 }
